--- a/HelpDesk/IT_Helpdesk/IT_Helpdesk.csproj
+++ b/HelpDesk/IT_Helpdesk/IT_Helpdesk.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\" />
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
