Added docker compose

--- a/HelpDesk/Maintenance_Helpdesk/Maintenance_Helpdesk.csproj
+++ b/HelpDesk/Maintenance_Helpdesk/Maintenance_Helpdesk.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>42ee043a-e3bd-44b7-ab2e-eaf4ccf877de</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
