--- a/HelpDesk/IT_Helpdesk/IT_Helpdesk.csproj
+++ b/HelpDesk/IT_Helpdesk/IT_Helpdesk.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>a7db0e9e-b0e6-4b1b-9b6f-08ac2365367d</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
