--- a/HelpDesk/HR_Helpdesk/HR_Helpdesk.csproj
+++ b/HelpDesk/HR_Helpdesk/HR_Helpdesk.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>e9b02803-ea88-4d93-9920-799dea968a27</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
