--- a/HelpDesk/docker-compose.yml
+++ b/HelpDesk/docker-compose.yml
@@ -17,3 +17,11 @@ services:
       context: .
       dockerfile: Maintenance_Helpdesk/Dockerfile
 
+
+  hr_helpdesk:
+    ports:
+        - 82:80
+    image: ${DOCKER_REGISTRY-}hrhelpdesk
+    build:
+      context: .
+      dockerfile: HR_Helpdesk/Dockerfile
