--- a/HelpDesk/HR_Helpdesk/HR_Helpdesk.csproj
+++ b/HelpDesk/HR_Helpdesk/HR_Helpdesk.csproj
@@ -15,6 +15,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Migrations\20210111101126_1.cs" />
+    <Compile Include="Migrations\20210111101126_1.Designer.cs" />
+    <Compile Include="Migrations\HR_HelpdeskDbContextModelSnapshot.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1">
